# corregraphe

./: .gitignore  LICENSE  README.md  setup.cfg
corregraphe/: __init__.py  core.py
