[metadata]
name = corregraphe
version = attr: corregraphe.__version__
author = "theolamayo",
description = Correlation graphs with NetworkX
long_description = file: README.md, LICENCE
url = https://github.com/theolamayo/corregraphe
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = find:

[mypy]
ignore_missing_imports = True
warn_unused_configs = True

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True

[flake8]
max-line-length = 88
